[package]
name = "minigrep"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A tool to search files"
homepage = "https://github.com/MegumiKato23/Mini-Grep"
repository = "https://github.com/MegumiKato23/Mini-Grep"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.3"
futures = "0.3"
anyhow = "1.0"
termcolor = "1.1"